GUI fixes - Number of results is shown next to top pager - Reduced spacing in person details

--- a/public/stylesheets/modal.css
+++ b/public/stylesheets/modal.css
@@ -9,3 +9,6 @@ div.modal-content {
     margin-top: 0px;
     margin-bottom: 0px;
 }
+.dl-horizontal {
+    margin:10px 0;
+}
